@@ -14,6 +14,7 @@ bugfixes:
 - fix wrong time format in tooltips in the data graph
 - fix wrong units on time axis for the temperature
 - Live mode did not react on changed inputs
+- enable to reconnect after the pump driver USB cable was accidentally removed
 
 
 from version 0.997.1 to 0.998
